--- a/view/401.html
+++ b/view/401.html
@@ -2,5 +2,5 @@
     
     <h1 class="text-accent-4 text-center">401</h1> 
     <h3 class="text-accent-1">Acesso Negado!!!!</h3>
-    <img src="./imagens/denied.jpg" alt="">
+    <img src="view/img/denied.jpg" alt="">
 </div>
